--- a/vacuum_app/pubspec.yaml
+++ b/vacuum_app/pubspec.yaml
@@ -49,6 +49,9 @@ dev_dependencies:
 
   flutter_launcher_icons: ^0.14.4
 
+  # Lints referenced by analysis_options.yaml
+  flutter_lints: ^6.0.0
+
 flutter_launcher_icons:
   image_path: "assets/icon/vacuum_icon.png"   # 아이콘 원본 이미지
   android: false
@@ -56,14 +59,6 @@ flutter_launcher_icons:
   windows:
     generate: true
     image_path: "assets/icon/vacuum_icon.png"
-
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
